tests/test_typing/bad/err4.catala_en
> Include: common.catala_en

```catala
scope S:
  definition z equals [ Int content x ]
  definition a equals number of (z ++ z) / 2
```

Should be "catala Typecheck", see test err3

```catala-test-inline
$ catala ocaml
[ERROR] Error during typechecking, incompatible types:
--> decimal
--> integer

Error coming from typechecking the following expression:
  --> tests/test_typing/bad/common.catala_en
   | 
15 |   output a content decimal
   |          ^
   + 

Type decimal coming from expression:
  --> tests/test_typing/bad/common.catala_en
   | 
15 |   output a content decimal
   |                    ^^^^^^^
   + 

Type integer coming from expression:
 --> tests/test_typing/bad/err4.catala_en
  | 
6 |   definition a equals number of (z ++ z) / 2
  |                       ^^^^^^
  + 
#return code 255#
```
